<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.BoldFragment">

    <data>
        <variable
            name="boldFragment"
            type="com.example.navigation.ui.BoldFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> boldFragment.showBold1()}"
            android:text="@string/bold1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> boldFragment.showBold2()}"
            android:text="@string/bold2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> boldFragment.showItalic()}"
            android:text="@string/italic" />

        <Button
            android:id="@+id/clickMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> boldFragment.showClickMe()}"
            android:text="@string/binding_field" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"/>

        <TextView
            android:id="@+id/sharedValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> boldFragment.showSharedValue()}"
            android:text="@string/show_shared_value" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> boldFragment.showFragmentValue()}"
            android:text="@string/show_fragment_value" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> boldFragment.amendSharedValue()}"
            android:text="@string/amend_shared_value" />

    </LinearLayout>

</layout>